--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,13 +28,13 @@ img{
 
     /* Font-Size */
     --learget-font: 3rem;
-    --mediumSize: 2.2rem;
-    --subTitle_size: 1.5rem;
+    --mediumSize: 2.1rem;
+    --subTitle_size: 1.4rem;
 }
 
 /* Titles */
 .title{
-    font-size: 3.6rem;
+    font-size: 3.5rem;
     font-weight: 700;
     line-height: 4.5rem;
     color: var(--white);
@@ -43,6 +43,17 @@ img{
     font-size: var(--mediumSize);
     font-weight: 600;
     color: var(--primary-black);
+    transition: .4s;
+}
+.sub_title2{
+    font-size: var(--subTitle_size);
+    font-weight: 600;
+    color: var(--primary-black);
+    transition: .4s;
+}
+.sub_title2:hover{
+    color: var(--primary-color);
+    cursor: pointer;
 }
 /* BTNS */
 .primary_btn{
@@ -59,6 +70,28 @@ img{
     transition: .4s;
 }
 .primary_btn:hover{
+    background: var(--hover-color);
+}
+.backTop{
+    position: fixed;
+    width: 3rem;
+    height: 3rem;
+    line-height: 3.2rem;
+    text-align: center;
+    background: var(--primary-color);
+    box-shadow: 0 0 2px var(--light-black);
+    transition: .4s ease;
+    bottom: 2rem;
+    right: 2rem;
+    border-radius: 50%;
+    display: none;
+}
+.backTop i{
+    font-size: 1.2rem;
+    color: var(--white);
+    margin-bottom: 0;
+}
+.backTop:hover{
     background: var(--hover-color);
 }
 /* =========Global CSS end here===============*/
@@ -108,7 +141,7 @@ img{
     color: var(--primary-color);
 }
 .mLogoLink img{
-    width: 110px;
+    width: 100px;
 }
 .desktop_rightSide{
     display: flex;
@@ -566,7 +599,7 @@ img{
     column-gap: 1%;
     flex-wrap: wrap;
     row-gap: 2rem;
-    
+    margin-bottom: 2rem;
 }
 .successSection{
     background: var(--white);
@@ -591,3 +624,285 @@ img{
     color: var(--primary-black);
 }
 /* Success section end */
+
+/* SErvices section start */
+.services_section{
+    padding: 5rem 0;
+}
+
+.servicesImg{
+    position: relative;
+    margin-bottom: 1rem;
+    position: relative;
+    transition: .4s;
+}
+.saleTop{
+    position: absolute;
+    top: .8rem;
+    left: .8rem;
+    font-size: .9rem;
+    font-weight: 600;
+    color: var(--white);
+    background: var(--primary-color);
+    width: 3rem;
+    height: 3rem;
+    line-height: 3rem;
+    text-align: center;
+    border-radius: 50%;
+    z-index: 22;
+}
+.imgOverly{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    background: rgba(0, 0, 0, .3);
+    display: none;
+    transition: .4s;
+}
+.servicesImg:hover .imgOverly{
+    display: block;
+}
+.servicesImg img{
+    width: 100%;
+}
+
+.service_price{
+    font-size: .9rem;
+    font-weight: 500;
+    color: var(--primary-color);
+}
+.service_price del{
+    color: var(--light-black);
+    margin-right: 0.2rem;
+}
+.serviceRating i{
+    color: var(--primary-color);
+    font-size: 0.8rem;
+} 
+.SviewCard{
+   display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    overflow: hidden; 
+    display: none;
+}
+.SaddToCard{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    overflow: hidden;
+}
+.serviceAddCard{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border: none;
+    outline: none;
+    background: transparent;
+    padding: 0;
+    cursor: pointer;
+    width: fit-content;
+}
+.SaddCard{
+    padding: .525rem .8rem;
+    background: var(--white);
+    font-size: .9rem;
+    color: var(--primary-black);
+    margin-right: -100%;
+    transition: .4s;
+    font-weight: 600;
+}
+.serviceAddCard i{
+    overflow: hidden;
+    background: var(--white);
+    padding: .7rem .8rem;
+    font-size: 1rem;
+    color: var(--light-black);
+    display: inline-block;
+}
+.serviceAddCard :hover .SaddCard{
+    margin-right: 0;
+}
+.serviceAddCard i:hover{
+    color: var(--primary-color);
+}
+/* Services section end */
+
+/* Sidebar card design start */
+.sidebarcardMain{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .15);
+    z-index: 999999;
+    display: none;
+    transition: .4s ease;
+}
+.sidebarCard{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 95%;
+    max-width: 380px;
+    height: 100vh;
+    background: var(--white);
+    padding: 2rem;
+    z-index: 999999;
+    transform: translateX(100%);
+    transition: .4s ease;
+}
+.sCardHeader{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 0;
+}
+.sCardHeader i{
+    font-size: 1.4rem;
+    color: var(--light-black);
+    transition: .4s;
+}
+.sCardHeader i:hover{
+    color: var(--primary-color);
+}
+.sCardBody{
+    margin-top: .8rem;
+    padding-top: 1.5rem;
+    border-top: 2px solid var(--primary-color);
+}
+.cProductSingle{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    column-gap: .8rem;
+}
+.cProductImg{
+    width: 8.5rem;
+    position: relative;
+}
+.cProductImg img{
+    box-shadow: 0 0 2px var(--light-black);
+}
+.cProductClose{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1.7rem;
+    height: 1.7rem;
+    line-height: 1.7rem;
+    text-align: center;
+    background: var(--white);
+    border: none;
+    outline: none;
+}
+.cProductClose i{
+    font-size: 1rem;
+    color: var(--light-black);
+    transition: .4s;
+}
+.cProductClose:hover i{
+    color: var(--primary-color);
+}
+.CPtitle{
+    font-size: .9rem;
+    font-weight: 600;
+    color: var(--primary-black);
+    line-height: 1rem;
+    display: inline-block;
+    margin-bottom: 0.4rem;
+    transition: .4s;
+}
+.CPtitle:hover{
+    color: var(--primary-color);
+}
+.CPprice{
+    font-size: 0.8rem;
+    font-weight: 600;
+    color: var(--light-black);
+}
+.sCardFooter{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: var(--white);
+    padding: 0 2rem 2rem 2rem;
+    width: 100%;
+    height: fit-content;
+}
+.sCardTotal{
+    width: 100%;
+    padding: 1rem;
+    background: rgba(0, 0, 0, .1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 1rem;
+}
+.sCardTotal span{
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: var(--primary-color);
+}
+.scard_total{
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: var(--primary-black);
+    margin-bottom: 0;
+}
+.sCardlinks{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 1rem;
+    padding: 1.5rem 0;
+}
+.sCardlinks a{
+    font-size: 1.1rem;
+    font-weight: 600;
+    border-bottom: 1px solid rgba(0, 0, 0, .3);
+    padding-bottom: 0.2rem;
+    transition: .4s;
+}
+.sCardlinks a:hover{
+    border-color: var(--hover-color);
+    color: var(--hover-color);
+}
+.sCardCheckout{
+    margin-top: 0.2rem;
+    width: 100%;
+    display: inline-block;
+    background: var(--primary-color);
+    text-align: center;
+    font-size: 1.1rem;
+    font-weight: 600;
+    transition: .4s;
+    color: var(--white);
+    padding: 1rem;
+}
+.sCardCheckout:hover{
+    background: var(--hover-color);
+}
+.sCardBody{
+    height: calc(100% - 13rem);
+    overflow-y: auto;
+}
+.SCPsingleMain{
+    padding: 1rem 0;
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+}
+.SCPsingleMain:first-child{
+    padding-top: 0;
+}
+.SCPsingleMain:last-child{
+    border: none;
+}
+/* Sitenar cart design end */
