--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,17 @@ img{
     color: var(--primary-color);
     cursor: pointer;
 }
+.sub_title3{
+    font-size: 1.7rem;
+    font-weight: 700;
+    color: var(--primary-black);
+    transition: .4s;
+}
+.smallText{
+    font-size: 0.95rem;
+    color: var(--primary-black);
+    line-height: 1.5rem;
+}
 /* BTNS */
 .primary_btn{
     font-size: 1.1rem;
@@ -906,3 +917,275 @@ img{
     border: none;
 }
 /* Sitenar cart design end */
+
+/* Consultation section start */
+.consultation_section{
+    padding: 5rem 0;
+    position: relative;
+    overflow: hidden;
+    border-top: 1px solid rgba(0, 0, 0, .1);
+    background: #ecf0f1;
+}
+.consultation_section .consulIMG{
+    position: absolute;
+    right: -25%;
+    top: 0;
+    height: 100%;
+    width: fit-content;
+}
+.consultationMain{
+    z-index: 2222;
+    width: 100%;
+    max-width: 750px;
+    background: rgba(255, 255, 255, .9);
+    box-shadow: 0 0 80px 80px var(--white);
+    position: relative;
+}
+.consultHtitle{
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: var(--primary-black);
+}
+.consultationInner{
+    width: 100%;
+    height: fit-content;
+    overflow: hidden;
+    background: var(--white);
+    padding-bottom: 1rem;
+}
+.consultationBody{
+    padding: 3rem 3rem 3rem 2px;
+    height: 550px;
+    overflow-y: auto; 
+}
+.consultation_bInner{
+    background: var(--white);
+    border-radius: .5rem;
+    box-shadow: 0 0 7px rgba(0, 0, 0, .2);
+}
+.btn-next-month i{
+    font-size: 1.2rem;
+    color: var(--primary-color);
+    transition: .4s;
+}
+.btn-next-month i:hover{
+    color: var(--hover-color);
+}
+.btn-prev-month i{
+    font-size: 1.2rem;
+    color: var(--primary-color);
+    transition: .4s;
+}
+.btn-prev-month i:hover{
+    color: var(--hover-color);
+}
+.btn-curr-month.month-name{
+    color: var(--primary-black);
+}
+.consultTopInner{
+    text-align: center;
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    padding: 1.5rem 6rem;
+}
+.consultTopInner img{
+    width: 6rem;
+    margin: .5rem auto;
+}
+.rsCTIparagraph{
+    font-size: .95rem;
+    font-weight: 600;
+    color: #2f3640;
+    opacity: .9;
+    margin: 0;
+}
+.consultationCalenderDiv{
+    padding: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    column-gap: 3%;
+    transition: .4s ease;
+    position: relative;
+}
+.calenderInnerDate{
+    width: 55%;
+}
+.calenderInnerTime{
+    width: 42%;
+    margin-top: 4.2rem;
+    position: relative;
+}
+.timeBoxSingle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1rem;
+    position: relative;
+    margin-bottom: 1rem;
+}
+.timeBoxSingle.next button{
+    font-size: 1rem;
+    font-weight: 700;
+    color: var(--white);
+    width: 48%;
+    text-align: center;
+    height: 3.3rem;
+    line-height: 3.3rem;
+    border-radius: .4rem;
+    border: none;
+}
+.timeBoxSingle.next .timeBtn{
+    background: #666666;
+    border: none;
+    pointer-events: none;
+    transition: .4s;
+}
+.timeBoxSingle.next .timeBtn:hover{
+    border: none;
+}
+.timeBoxSingle.next .timeNextBtn{
+    background: var(--primary-color);
+    transition: .4s;
+    transform: translate(0);
+    position: relative;
+}
+.timeBoxSingle.next .timeNextBtn:hover{
+    background: var(--hover-color);
+}
+.timeBoxSingle{
+    overflow: hidden;
+}
+.timeBoxSingle .timeBtn{
+    width: 100%;
+    border: 1px solid var(--primary-color);
+    background: var(--white);
+    color: var(--primary-color);
+    height: 3.3rem;
+    border-radius: .4rem;
+    font-weight: 700;
+    pointer-events: painted;
+}
+.timeBoxSingle .timeBtn:hover{
+    border: 2px solid var(--primary-color);
+}
+.timeBoxSingle .timeNextBtn{
+    transform: translateX(100%);
+    position: absolute;
+    top: 0;
+    right: -.1px;
+}
+.timer_top{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 2.5rem;
+    margin: 1rem auto;
+}
+.timerTinner{
+    opacity: .8;
+}
+.timerTinner i{
+    color: #2f3640;
+    margin-right: 0.3rem;
+    font-size: 1.1rem;
+}
+.timerTinner span{
+    font-size: 0.9rem;
+    font-weight: 600;
+    color: #2f3640;
+}
+.consultTopInner .smallText{
+    width: 90%;
+    margin: auto;
+}
+.appointmentMain{
+    padding: 1.5rem;
+    background: var(--white);
+    display: none;
+    transition: .4s ease;
+}
+.calenderOverlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, .6);
+    z-index: 22;
+}
+.appointmentForm{
+    width: 100%;
+    max-width: 30rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+.apointmentformTitle{
+    font-size: 1.3rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    color: var(--primary-black);
+}
+.appointFormLevel{
+    font-size: .95rem;
+    font-weight: 600;
+    color: var(--primary-black);
+    display: block;
+}
+.appointmentForm input, textarea{
+    width: 100%;
+    padding: 0.6rem;
+    border-radius: .4rem;
+    display: block;
+    margin-bottom: 1.2rem;
+    border: 1px solid rgba(0, 0, 0, .2);
+    box-shadow: 0 0 1px var(--primary-color);
+    outline-color: var(--primary-color);
+}
+.appointmentForm .policies{
+    font-size: 0.85rem;
+    font-weight: 400;
+    color: var(--primary-black);
+}
+.policies a{
+    font-size: 0.9rem;
+    font-weight: 500;
+    color: var(--primary-color);
+    transition: .4s ease;
+}
+.policies a:hover{
+    text-decoration: underline;
+    color: var(--hover-color);
+}
+.p-2.js-collapse{
+    position: absolute;
+    top: 1rem;
+    right: 1.2rem;
+}
+.p-2.js-collapse .list-group-item{
+    padding: 0;
+    background: transparent;
+    margin-top: -0.8rem;
+}
+.consultConfirm_main{
+    padding: 1.5rem 3rem;
+    width: 100%;
+    max-width: 35rem;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    display: none;
+    transition: .4s ease;
+}
+.confirmParagraph{
+    font-size: 1.1rem;
+    font-weight: 500;
+    color: var(--primary-black);
+    opacity: .9;
+}
+.confirmData{
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: var(--primary-black);
+}
+
+/* Consultation section end */
