--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -542,7 +542,7 @@ img{
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, .7);
+    background: rgba(0, 0, 0, .65);
 }
 .borderDiv{
     width: 25rem;
@@ -1575,3 +1575,119 @@ img{
     text-align: justify;
 }
 /* ============== About Us Page design end ================ */
+
+/* =========== Contact page design start ============== */
+.contact_form_section{
+    padding: 4rem 0;
+    background: var(--white);
+    box-shadow: 0 0 50px 70px var(--white);
+    position: relative;
+}
+.contact_form_main{
+    padding: 2.5rem 3rem;
+    border-radius: .5rem;
+    width: 100%;
+    max-width: 44rem;
+    margin-left: auto;
+    margin-right: auto;
+    background: #F5F5F5;
+    box-shadow: 0 0 5px var(--primary-color);
+}
+.contact_form_inner .paragraph{
+    font-size: 0.95rem;
+    line-height: 1.5rem;
+}
+.boldParagraph{
+    font-size: 1rem;
+    font-weight: 700;
+    color: var(--primary-black);
+    line-height: 1.5rem;
+    margin-bottom: 2rem;
+}
+.name_email_div{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    column-gap: 4%;
+    margin-bottom: 1.2rem;
+}
+.name_email_div .single{
+    width: 48%;
+}
+.contact_form label{
+    display: block;
+    font-size: 1rem;
+    font-weight: 700;
+    color: var(--primary-black);
+}
+.contact_form input{
+    width: 100%;
+    padding: 0.6rem;
+    border: 1px solid var(--light-black);
+    outline-color: var(--primary-color);
+    border-radius: .3rem;
+    background: var(--white);
+    transition: .4s ease;
+}
+.contact_form select{
+    width: 100%;
+    padding: 0.6rem;
+    border: 1px solid var(--light-black);
+    outline-color: var(--primary-color);
+    border-radius: .3rem;
+    margin-bottom: 1.2rem;
+    transition: .4s ease;
+}
+.contact_form textarea{
+    height: 8rem;
+}
+
+.cMobileDiv{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 5rem;
+}
+.contact_bottom{
+    position: relative;
+    z-index: 999;
+}
+.cMobile span{
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: var(--primary-black);
+    margin-bottom: 0.2rem;
+    margin-top: 0.2rem;
+    display: block;
+}
+.cMobile{
+    text-align: center;
+}
+.cMobile i{
+    font-size: 1.2rem;
+    color: var(--primary-color);
+}
+.cMobile a{
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: var(--primary-color);
+    transition: .4s ease;
+}
+.cMobile a:hover{
+    color: var(--primary-black);
+}
+.cSocialDiv .sub_title{
+    font-size: 1.4rem;
+    margin-bottom: 0.5rem;
+}
+.cSocialDiv .footerSocialInner a{
+    width: 2.5rem;
+    height: 2.5rem;
+    line-height: 2.5rem;
+    margin: auto .3rem;
+}
+.cSocialDiv .footerSocialInner{
+    margin-bottom: 4rem;
+}
+
+/* ============== Contact Page design end ============== */
