--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1691,3 +1691,91 @@ img{
 }
 
 /* ============== Contact Page design end ============== */
+
+/* ============ Augth page design start ============== */
+.aught_section{
+    padding: 5.2rem 0;
+    background: var(--white);
+}
+.sectionDevider{
+    width: 100%;
+    background: var(--white);
+    box-shadow: 0 0 50px 70px var(--white);
+    position: relative;
+}
+.aught_single{
+    padding: 1rem;
+}
+.augthlabel{
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--paragraph-black);
+    margin-bottom: 0.3rem;
+    display: block;
+}
+.augth_form_inner{
+    background: #F5F5F5;
+    border-radius: .2rem;
+    box-shadow: 0 0 .15rem var(--primary-color);
+    padding: 1.5rem;
+}
+.augth_form input{
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid rgba(0, 0, 0, .2);
+    transition: .4s ease;
+    outline-color: var(--primary-color);
+    border-radius: .3rem;
+    margin-bottom: 1.2rem;
+}
+.augth_form input:hover{
+    border-color: var(--primary-color);
+}
+.forgotLink{
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--primary-color);
+    transition: .4s ease;
+    display: block;
+}
+.forgotLink:hover{
+    color: var(--hover-color);
+    text-decoration: underline;
+}
+.countrySearch{
+    display: block;
+    padding: 0.5rem;
+    width: 100%;
+    border: 1px solid rgba(0, 0, 0, .2);
+    outline-color: var(--primary-color) !important;
+    border-radius: .3rem;
+    transition: .4s ease;
+    margin-bottom: 1rem;
+}
+.countrySearch:hover{
+    border-color: var(--primary-color);
+}
+.signupAcceptPolicy{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 1rem;
+}
+.signupAcceptPolicy a{
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--primary-color);
+    transition: .4s ease;
+    display: block;
+    margin-bottom: 0.5rem;
+}
+.signupAcceptPolicy a:hover{
+    color: var(--hover-color);
+    text-decoration: underline;
+}
+.signupAcceptPolicy input{
+    display: block;
+    width: fit-content;
+    margin-bottom: .4rem;
+}
+/* ============= Augth page design end =========== */
