--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ img{
     outline: none;
     background: var(--primary-color);
     border-radius: .2rem;
-    padding: .9rem 2rem;
+    padding: .85rem 2rem;
     letter-spacing: .5px;
     transition: .4s;
 }
@@ -473,6 +473,9 @@ img{
 }
 .topSliderSection.singlepage{
     height: 30rem;
+}
+.services_section{
+    position: relative;
 }
 .sicgle_slider{
     display: none;
@@ -1379,7 +1382,7 @@ img{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    column-gap: 1.5rem;
+    column-gap: 1rem;
     padding: 4rem 0;
 }
 .footerTleft{
@@ -1704,7 +1707,10 @@ img{
     position: relative;
 }
 .aught_single{
-    padding: 1rem;
+    padding: 1rem 0 1rem 1rem;
+}
+.aught_single.login{
+    padding: 1rem 1rem 1rem 0;
 }
 .augthlabel{
     font-size: 1rem;
