--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -26,7 +26,14 @@
     .footerTright{
         column-gap: 1rem;
     }
-    
+
+    /* Inner page for 1200px */
+    .mentor_choose_single{
+        width: 48%;
+    }
+    .mentor_choose_inner{
+        row-gap: 2.5rem;
+    }
 }
 
 /* ======== Max width =========== 922px */
@@ -115,6 +122,10 @@
         padding: 2rem 0 4rem 0;
         box-shadow: 0 0 50px 110px var(--white);
     }
+
+    .mentor_choose_single{
+        width: 100%;
+    }
 }
 
 /* ============= Max width 767px ============ */
@@ -191,10 +202,11 @@
         height: 27rem;
     }
     .title{
-        font-size: 3rem;
+        font-size: 2.8rem;
+        line-height: 3.5rem;
     }
     .sub_title{
-        font-size: 1.9rem;
+        font-size: 1.75rem;
     }
     .primary_btn{
         font-size: 1rem;
@@ -226,10 +238,16 @@
         padding-top: 2rem 0 5rem 0;
         box-shadow: 0 0 50px 110px var(--white);
     }
+    .mentor_choose_section{
+        padding: 4rem 0;
+    }
 }
 
 /* ============ Max width 576px ============= */
 @media (max-width: 576px) {
+    .mentor_choose_section{
+        padding: 3rem 0;
+    }
     .borderDiv{
         margin: 1.2rem auto;
         width: 20rem;
@@ -299,10 +317,16 @@
     .ceo_right iframe {
         height: 17rem;
     }
+    .sub_title3{
+        font-size: 1.5rem;
+    }
 }
 
 /* Max width 480px */
 @media (max-width: 480px) {
+    .mentor_choose_section{
+        padding: 2rem 0;
+    }
 
     .augth_form_inner{
         padding: 1.5rem .5rem;
@@ -346,8 +370,8 @@
         width: 18rem;
     }
     .title {
-        font-size: 2.6rem;
-        line-height: 3rem;
+        font-size: 2.2rem;
+        line-height: 2.6rem;
     }
     .sliderparagraph {
         font-size: 1.25rem;
@@ -357,7 +381,7 @@
         top: 70%;
     }
     .sub_title {
-        font-size: 1.85rem;
+        font-size: 1.7rem;
     }
     .slider_data.singlepage {
         margin-top: 35%;
@@ -379,6 +403,9 @@
     .ceo_right iframe {
         height: 13rem;
     }
+    .sub_title4{
+        font-size: 1.3rem;
+    }
 }
 
 /* Max width 370px */
@@ -392,5 +419,8 @@
     }
     .ceo_right iframe {
         height: 12rem;
+    }
+    .title{
+        font-size: 2rem;
     }
 }
