--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1966,6 +1966,52 @@ img{
 .notePara a:hover{
     color: var(--hover-color);
 }
+.servicesPageSection{
+    background: var(--white);
+    padding: 5rem 0;
+    box-shadow: 0 0 50px 70px var(--white);
+    position: relative;
+}
+.principles_section{
+    border-top: 1px solid rgba(0, 0, 0, .12);
+}
+.principle_bigText{
+    font-size: 5rem;
+    color: var(--primary-color);
+    font-weight: 200;
+}
+.name_and_email{
+    display: flex;
+    justify-content: space-between;
+    column-gap: 4%;
+    row-gap: 1.2rem;
+}
+.nameEmailInnerFree{
+    width: 48%;
+}
+.nameEmailInnerFree input{
+    width: 100%;
+    padding: 0.6rem;
+    border-radius: 0.4rem;
+    background: transparent;
+    outline-color: var(--primary-color);
+    border: 1px solid rgba(0, 0, 0, .2);
+    transition: .4s ease;
+}
+.nameEmailInnerFree input:hover{
+    border-color: var(--primary-color);
+}
+.success_massage{
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: var(--primary-color);
+    transition: .4s ease;
+    display: none;
+    margin-top: 0.5rem;
+}
+.free_consultation_section{
+    background: #F5F5F5;
+}
 /* ================ Mentorship plan end =============== */
 
 
@@ -1996,6 +2042,12 @@ img{
 }
 .mentorPageSlider{
     background: url('../images/TopSliderInner/mentor.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.servicesTop{
+    background: url('../images/TopSliderInner/img001-23-1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
